Mensagem de problema

--- a/README
+++ b/README
@@ -1,2 +1,8 @@
 Aplicação Teste com SQLite 3 e Prawn para geração de relatórios em PDF
 
+Links sobre o assunto: 
+
+http://github.com/sandal/prawn/wiki/Using-Prawn-with-Bundler
+
+
+AINDA NÃO ESTÁ FUNCIONANDO!
